refactor: update security report formats to SARIF and optimize report uploads

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ env:
   DIVE_VERSION: "0.13.1"
   GRYPE_VERSION: "0.103.0"
   SYFT_VERSION: "1.38.0"
+  ARCH_PLATFORMS: linux/amd64
 
 jobs:
   build:
@@ -72,7 +73,7 @@ jobs:
           provenance: false
           context: .
           file: ./Dockerfile.template
-          platforms: linux/amd64
+          platforms: ${{ env.ARCH_PLATFORMS }}
           tags: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -110,8 +111,9 @@ jobs:
         with:
           command: cves,sbom
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          sarif-file: ${{ github.workspace }}/scout.report.json
+          sarif-file: ${{ github.workspace }}/scout.sarif
           write-comment: true
+          summary: true
           github-token: ${{ secrets.GH_TOKEN }}
 
       - name: Analyze image with Trivy💊
@@ -119,8 +121,8 @@ jobs:
         with:
           image-ref: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           scan-type: image
-          format: "json"
-          output: "${{ github.workspace }}/trivy.report.json"
+          format: "sarif"
+          output: "${{ github.workspace }}/trivy.sarif"
           severity: "MEDIUM,HIGH,CRITICAL"
           scanners: "vuln"
           github-pat: ${{ secrets.GH_TOKEN }}
@@ -131,25 +133,27 @@ jobs:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           fail-build: false
           severity-cutoff: critical
-          output-format: json
+          output-format: sarif
           grype-version: v${{ env.GRYPE_VERSION }}
-          output-file: ${{ github.workspace }}/grype.report.json
+          output-file: ${{ github.workspace }}/grype.sarif
 
       - name: Analyze image with Snyk💊
         uses: snyk/actions/docker@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          sarif: false
-          json: true
+          sarif: true
+          json: false
+          args: --sarif-file-output=${{ github.workspace }}/snyk.sarif
 
       - name: Analyze image with Dockle💊
         uses: goodwithtech/dockle-action@main
         with:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          format: "json"
-          output: "dockle.report.json"
+          format: "sarif"
+          output: "dockle.sarif"
           exit-code: "1"
           exit-level: "warn"
           ignore: "CIS-DI-0010"
@@ -159,26 +163,28 @@ jobs:
         with:
           syft-version: v${{ env.SYFT_VERSION }}
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          format: spdx-json
-          output-file: ${{ github.workspace }}/syft.report.json
-          upload-artifact: false
+          format: cyclonedx-json
+          upload-artifact: true
 
       - name: Upload all reports📊
-        uses: actions/upload-artifact@v5.0.0
+        uses: github/codeql-action/upload-sarif@v4
         with:
-          name: security-reports
-          path: |
-            ${{ github.workspace }}/*.report.json
-            ${{ github.workspace }}/snyk.json
+          sarif_file: |
+            ${{ github.workspace }}/scout.sarif
+            ${{ github.workspace }}/trivy.sarif
+            ${{ github.workspace }}/grype.sarif
+            ${{ github.workspace }}/snyk.sarif
+            ${{ github.workspace }}/dockle.sarif
+          category: container-security-scan
 
       - name: Push the Docker images to registries💾
         run: |
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ghcr.io/ammnt/nginx:latest
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ammnt/nginx:${{ env.APP_VERSION }}
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ammnt/nginx:latest
-          docker push ghcr.io/ammnt/nginx --all-tags
+          docker push ghcr.io/ammnt/angnginxie --all-tags
           docker push ammnt/nginx --all-tags
-          DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} | \
+          DIGEST=$(docker inspect -f='{{index .RepoDigests 0}}' ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} \
             | cut -d'@' -f2)
           echo "DIGEST=$DIGEST" >> $GITHUB_ENV
 
@@ -199,7 +205,7 @@ jobs:
         run: |
           cosign sign -y --recursive --key env://COSIGN_KEY ghcr.io/ammnt/nginx@${{ env.DIGEST }}
           cosign sign -y --recursive --key env://COSIGN_KEY ammnt/nginx@${{ env.DIGEST }}
-          cosign sign -y --recursive --key env://COSIGN_KEY ghcr.io/ammnt/nginx@${{ env.APP_VERSION }}
+          cosign sign -y --recursive --key env://COSIGN_KEY ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           cosign sign -y --recursive --key env://COSIGN_KEY ammnt/nginx:${{ env.APP_VERSION }}
           # cosign verify --key cosign.pub ghcr.io/ammnt/nginx@${{ env.DIGEST }}
           # cosign verify --key cosign.pub ammnt/nginx@${{ env.DIGEST }}
