refactor: enhance Dockerfile with additional GCC optimization flags and improve README for clarity

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,6 +190,8 @@ jobs:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           format: cyclonedx-json
           upload-artifact: true
+          dependency-snapshot: true
+          github-token: ${{ secrets.SNYK_TOKEN }}
 
       - name: Push the Docker images to registries💾
         run: |
