refactor: integrate Hadolint for Dockerfile analysis and update README for scanning tools

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -118,7 +118,7 @@ RUN set -e \
     --without-mail_imap_module \
     --without-mail_smtp_module \
     --add-module="/tmp/ngx_brotli" \
-&& make -s -j $(nproc) && make -s install && make -s clean \
+&& make -s -j "$(nproc)" && make -s install && make -s clean \
 && strip --strip-all /usr/sbin/nginx \
 && chown -R nginx:nginx /etc/nginx && chmod -R g+w /etc/nginx \
 && file /usr/sbin/nginx && ldd /usr/sbin/nginx || true \
