--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,3 +1,4 @@
+# Build arguments for version pinning and reproducibility
 ARG BASE_VERSION
 ARG BASE_HASH
 FROM alpine:${BASE_VERSION}@sha256:${BASE_HASH} AS builder
@@ -8,142 +9,189 @@ ARG ZLIB_VERSION
 ARG BUILD_DATE
 
 WORKDIR /tmp
-RUN set -e \
-&& addgroup --system --gid 101 nginx && adduser --disabled-password --shell /bin/false --ingroup nginx --uid 101 --no-create-home nginx \
-&& apk -U upgrade && apk add --no-cache \
-    gcc \
-    make \
-    git \
-    mimalloc2-dev \
-    tini-static \
-    build-base \
-    ca-certificates \
-    linux-headers \
-    tzdata \
-    upx \
-    perl \
-    cmake \
-&& update-ca-certificates \
-&& git clone --depth 1 --recursive -j8 --single-branch -b "release-${APP_VERSION}" https://github.com/nginx/nginx && rm -rf /tmp/nginx/docs/html/* \
-&& git clone --depth 1 --recursive -j8 --single-branch -b "openssl-${OPENSSL_VERSION}" https://github.com/openssl/openssl \
-&& git clone --depth 1 --recursive -j8 --single-branch -b "pcre2-${PCRE_VERSION}" https://github.com/PCRE2Project/pcre2 \
-&& git clone --depth 1 --recursive -j8 --single-branch -b "${ZLIB_VERSION}" https://github.com/zlib-ng/zlib-ng.git \
-&& git clone --depth 1 --recurse-submodules -j8 https://github.com/google/ngx_brotli \
-&& sed -i -e 's@"nginx/"@" "@g' /tmp/nginx/src/core/nginx.h \
-&& sed -i -e 's@"nginx version: "@" "@g' /tmp/nginx/src/core/nginx.c \
-&& sed -i -e 's@r->headers_out.server == NULL@0@g' /tmp/nginx/src/http/ngx_http_header_filter_module.c \
-&& sed -i -e 's@r->headers_out.server == NULL@0@g' /tmp/nginx/src/http/v2/ngx_http_v2_filter_module.c \
-&& sed -i -e 's@r->headers_out.server == NULL@0@g' /tmp/nginx/src/http/v3/ngx_http_v3_filter_module.c \
-&& sed -i -e 's@<hr><center>nginx</center>@@g' /tmp/nginx/src/http/ngx_http_special_response.c \
-&& sed -i -e 's@NGINX_VERSION      ".*"@NGINX_VERSION      " "@g' /tmp/nginx/src/core/nginx.h \
-&& sed -i -e 's/SSL_OP_CIPHER_SERVER_PREFERENCE);/SSL_OP_CIPHER_SERVER_PREFERENCE | SSL_OP_PRIORITIZE_CHACHA);/g' /tmp/nginx/src/event/ngx_event_openssl.c
 
+# System setup and dependency installation
+RUN set -e \
+    # Create non-root user for security (nginx:nginx)
+    && addgroup --system --gid 101 nginx && adduser --disabled-password --shell /bin/false --ingroup nginx --uid 101 --no-create-home nginx \
+    # Update system and install build dependencies
+    && apk -U upgrade && apk add --no-cache \
+        gcc \
+        make \
+        git \
+        mimalloc2-dev \
+        tini-static \
+        build-base \
+        ca-certificates \
+        linux-headers \
+        tzdata \
+        upx \
+        perl \
+        cmake \
+    # Update CA certificates for SSL verification
+    && update-ca-certificates \
+    # Clone NGINX webserver and remove documentation
+    && git clone --depth 1 --recursive -j8 --single-branch -b "release-${APP_VERSION}" https://github.com/nginx/nginx && rm -rf /tmp/nginx/docs/html/* \
+    # Clone OpenSSL with HTTP/3 and QUIC support
+    && git clone --depth 1 --recursive -j8 --single-branch -b "openssl-${OPENSSL_VERSION}" https://github.com/openssl/openssl \
+    # Clone PCRE2 for regex with JIT support
+    && git clone --depth 1 --recursive -j8 --single-branch -b "pcre2-${PCRE_VERSION}" https://github.com/PCRE2Project/pcre2 \
+    # Clone zlib-ng for modern compression performance
+    && git clone --depth 1 --recursive -j8 --single-branch -b "${ZLIB_VERSION}" https://github.com/zlib-ng/zlib-ng.git \
+    # Clone Brotli compression module
+    && git clone --depth 1 --recurse-submodules -j8 https://github.com/google/ngx_brotli \
+    # Security hardening: Remove server headers and version information
+    && sed -i -e 's@"nginx/"@" "@g' /tmp/nginx/src/core/nginx.h \
+    && sed -i -e 's@"nginx version: "@" "@g' /tmp/nginx/src/core/nginx.c \
+    # Remove Server header from HTTP responses (HTTP/1.1, HTTP/2, HTTP/3)
+    && sed -i -e 's@r->headers_out.server == NULL@0@g' /tmp/nginx/src/http/ngx_http_header_filter_module.c \
+    && sed -i -e 's@r->headers_out.server == NULL@0@g' /tmp/nginx/src/http/v2/ngx_http_v2_filter_module.c \
+    && sed -i -e 's@r->headers_out.server == NULL@0@g' /tmp/nginx/src/http/v3/ngx_http_v3_filter_module.c \
+    # Remove default footer from error pages
+    && sed -i -e 's@<hr><center>nginx</center>@@g' /tmp/nginx/src/http/ngx_http_special_response.c \
+    # Anonymize version strings in source code
+    && sed -i -e 's@NGINX_VERSION      ".*"@NGINX_VERSION      " "@g' /tmp/nginx/src/core/nginx.h \
+    # Prioritize ChaCha20 cipher for better performance on mobile devices
+    && sed -i -e 's/SSL_OP_CIPHER_SERVER_PREFERENCE);/SSL_OP_CIPHER_SERVER_PREFERENCE | SSL_OP_PRIORITIZE_CHACHA);/g' /tmp/nginx/src/event/ngx_event_openssl.c
+
+# Build Brotli compression library with optimizations
 WORKDIR /tmp/zlib-ng
 RUN set -e \
-&& mkdir -p /tmp/ngx_brotli/deps/brotli/out \
-&& cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF \
-    -DCMAKE_C_FLAGS="-Ofast -m64 -march=native -mtune=native -flto -funroll-loops -ffunction-sections -fdata-sections -Wl,--gc-sections" \
-    -DCMAKE_CXX_FLAGS="-Ofast -m64 -march=native -mtune=native -flto -funroll-loops -ffunction-sections -fdata-sections -Wl,--gc-sections" \
-    -DCMAKE_INSTALL_PREFIX=./installed -B /tmp/ngx_brotli/deps/brotli/out -S /tmp/ngx_brotli/deps/brotli \
-&& cmake --build /tmp/ngx_brotli/deps/brotli/out --config Release --target brotlienc \
-&& sed -i "s/compat=0/compat=1/" /tmp/zlib-ng/configure && ./configure --zlib-compat \
-&& make -s -j "$(nproc)" && make -s install && make -s clean
+    && mkdir -p /tmp/ngx_brotli/deps/brotli/out \
+    # Configure Brotli with performance optimizations
+    && cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF \
+        -DCMAKE_C_FLAGS="-Ofast -m64 -march=native -mtune=native -flto -funroll-loops -ffunction-sections -fdata-sections -Wl,--gc-sections" \
+        -DCMAKE_CXX_FLAGS="-Ofast -m64 -march=native -mtune=native -flto -funroll-loops -ffunction-sections -fdata-sections -Wl,--gc-sections" \
+        -DCMAKE_INSTALL_PREFIX=./installed -B /tmp/ngx_brotli/deps/brotli/out -S /tmp/ngx_brotli/deps/brotli \
+    # Build Brotli encoder
+    && cmake --build /tmp/ngx_brotli/deps/brotli/out --config Release --target brotlienc \
+    # Configure zlib-ng for compatibility mode
+    && sed -i "s/compat=0/compat=1/" /tmp/zlib-ng/configure && ./configure --zlib-compat \
+    # Build and install zlib-ng
+    && make -s -j "$(nproc)" && make -s install && make -s clean
 
+# Configure and build NGINX with security hardening and optimizations
 WORKDIR /tmp/nginx
 RUN set -e \
-&& ./auto/configure \
-    --prefix="/etc/nginx" \
-    --sbin-path="/usr/sbin/nginx" \
-    --user="nginx" \
-    --group="nginx" \
-    --http-log-path="/dev/stdout" \
-    --error-log-path="/dev/stderr" \
-    --conf-path="/etc/nginx/nginx.conf" \
-    --pid-path="/tmp/nginx.pid" \
-    --lock-path="/tmp/nginx.lock" \
-    --http-client-body-temp-path="/tmp/client_temp" \
-    --http-proxy-temp-path="/tmp/proxy_temp" \
-    --http-fastcgi-temp-path="/tmp/fastcgi_temp" \
-    --with-openssl="/tmp/openssl" \
-    --with-openssl-opt="enable-ec_nistp_64_gcc_128" \
-    --with-openssl-opt="no-ssl2" \
-    --with-openssl-opt="no-ssl3" \
-    --with-openssl-opt="no-shared" \
-    --with-openssl-opt="no-weak-ssl-ciphers" \
-    --with-openssl-opt="no-tls-deprecated-ec" \
-    --with-openssl-opt="enable-quic" \
-    --with-openssl-opt="enable-ktls" \
-    --with-pcre="/tmp/pcre2" \
-    --with-zlib="/tmp/zlib-ng" \
-    --with-cc-opt="-static -static-libgcc" \
-    --with-ld-opt="-static" \
-    --with-cc-opt="-O2" \
-    --with-cc-opt="-march=x86-64" \
-    --with-cc-opt="-fhardened" \
-    --with-cc-opt="-D_FORTIFY_SOURCE=3" \
-    --with-cc-opt="-D_GLIBCXX_ASSERTIONS" \
-    --with-cc-opt="-ftrivial-auto-var-init=zero" \
-    --with-cc-opt="-Wl,-z,relro,-z,now" \
-    --with-cc-opt="-fstack-protector-strong" \
-    --with-cc-opt="-fstack-clash-protection" \
-    --with-cc-opt="-fcf-protection=full" \
-    --with-cc-opt="-Wformat" \
-    --with-cc-opt="-Wformat-security" \
-    --with-cc-opt="-Werror=format-security" \
-    --with-cc-opt="-fcode-hoisting" \
-    --with-cc-opt="-Wno-deprecated-declarations" \
-    --with-cc-opt="-DTCP_FASTOPEN=23" \
-    --with-cc-opt="-flto" \
-    --with-compat \
-    --with-pcre-jit \
-    --with-threads \
-    --with-http_realip_module \
-    --with-http_stub_status_module \
-    --with-http_ssl_module \
-    --with-http_v2_module \
-    --with-http_v3_module \
-    --with-http_gzip_static_module \
-    --with-stream \
-    --with-stream_realip_module \
-    --with-stream_ssl_module \
-    --with-stream_ssl_preread_module \
-    --without-stream_split_clients_module \
-    --without-stream_set_module \
-    --without-http_geo_module \
-    --without-http_scgi_module \
-    --without-http_uwsgi_module \
-    --without-http_autoindex_module \
-    --without-http_split_clients_module \
-    --without-http_memcached_module \
-    --without-http_ssi_module \
-    --without-http_empty_gif_module \
-    --without-http_browser_module \
-    --without-http_userid_module \
-    --without-http_mirror_module \
-    --without-http_referer_module \
-    --without-mail_pop3_module \
-    --without-mail_imap_module \
-    --without-mail_smtp_module \
-    --add-module="/tmp/ngx_brotli" \
-&& make -s -j "$(nproc)" && make -s install && make -s clean \
-&& strip --strip-all /usr/sbin/nginx \
-&& chown -R nginx:nginx /etc/nginx && chmod -R g+w /etc/nginx \
-&& file /usr/sbin/nginx && ldd /usr/sbin/nginx || true \
-&& upx --best --lzma /usr/sbin/nginx && rm -rf /tmp/*
+    && ./auto/configure \
+        # Installation paths
+        --prefix="/etc/nginx" \
+        --sbin-path="/usr/sbin/nginx" \
+        --user="nginx" \
+        --group="nginx" \
+        --http-log-path="/dev/stdout" \
+        --error-log-path="/dev/stderr" \
+        --conf-path="/etc/nginx/nginx.conf" \
+        --pid-path="/tmp/nginx.pid" \
+        --lock-path="/tmp/nginx.lock" \
+        --http-client-body-temp-path="/tmp/client_temp" \
+        --http-proxy-temp-path="/tmp/proxy_temp" \
+        --http-fastcgi-temp-path="/tmp/fastcgi_temp" \
+        # SSL/TLS configuration with modern protocols
+        --with-openssl="/tmp/openssl" \
+        --with-openssl-opt="enable-ec_nistp_64_gcc_128" \
+        --with-openssl-opt="no-ssl2" \
+        --with-openssl-opt="no-ssl3" \
+        --with-openssl-opt="no-shared" \
+        --with-openssl-opt="no-weak-ssl-ciphers" \
+        --with-openssl-opt="no-tls-deprecated-ec" \
+        --with-openssl-opt="enable-quic" \
+        --with-openssl-opt="enable-ktls" \
+        # External libraries
+        --with-pcre="/tmp/pcre2" \
+        --with-zlib="/tmp/zlib-ng" \
+        # Static compilation flags
+        --with-cc-opt="-static -static-libgcc" \
+        --with-ld-opt="-static" \
+        # Performance optimizations
+        --with-cc-opt="-O2" \
+        --with-cc-opt="-march=x86-64" \
+        --with-cc-opt="-flto" \
+        # Security hardening flags
+        --with-cc-opt="-fhardened" \
+        --with-cc-opt="-D_FORTIFY_SOURCE=3" \
+        --with-cc-opt="-D_GLIBCXX_ASSERTIONS" \
+        --with-cc-opt="-ftrivial-auto-var-init=zero" \
+        --with-cc-opt="-Wl,-z,relro,-z,now" \
+        --with-cc-opt="-fstack-protector-strong" \
+        --with-cc-opt="-fstack-clash-protection" \
+        --with-cc-opt="-fcf-protection=full" \
+        --with-cc-opt="-Wformat" \
+        --with-cc-opt="-Wformat-security" \
+        --with-cc-opt="-Werror=format-security" \
+        --with-cc-opt="-fcode-hoisting" \
+        --with-cc-opt="-Wno-deprecated-declarations" \
+        --with-cc-opt="-DTCP_FASTOPEN=23" \
+        --with-cc-opt="-flto" \
+        # Core features
+        --with-compat \
+        --with-pcre-jit \
+        --with-threads \
+        # HTTP modules
+        --with-http_realip_module \
+        --with-http_stub_status_module \
+        --with-http_ssl_module \
+        --with-http_v2_module \
+        --with-http_v3_module \
+        --with-http_gzip_static_module \
+        # Stream modules
+        --with-stream \
+        --with-stream_realip_module \
+        --with-stream_ssl_module \
+        --with-stream_ssl_preread_module \
+        # Remove unnecessary modules to reduce attack surface
+        --without-stream_split_clients_module \
+        --without-stream_set_module \
+        --without-http_geo_module \
+        --without-http_scgi_module \
+        --without-http_uwsgi_module \
+        --without-http_autoindex_module \
+        --without-http_split_clients_module \
+        --without-http_memcached_module \
+        --without-http_ssi_module \
+        --without-http_empty_gif_module \
+        --without-http_browser_module \
+        --without-http_userid_module \
+        --without-http_mirror_module \
+        --without-http_referer_module \
+        --without-mail_pop3_module \
+        --without-mail_imap_module \
+        --without-mail_smtp_module \
+        # Third-party modules
+        --add-module="/tmp/ngx_brotli" \
+    # Build and install NGINX
+    && make -s -j "$(nproc)" && make -s install && make -s clean \
+    # Security hardening: strip debug symbols and compress binary
+    && strip --strip-all /usr/sbin/nginx \
+    # Set proper permissions
+    && chown -R nginx:nginx /etc/nginx && chmod -R g+w /etc/nginx \
+    # Verify binary and dependencies
+    && file /usr/sbin/nginx && ldd /usr/sbin/nginx || true \
+    # Compress binary with UPX (minimal memory overhead)
+    && upx --best --lzma /usr/sbin/nginx && rm -rf /tmp/*
 
+# Final distroless image
 FROM scratch
+
+# Copy minimal runtime dependencies from builder
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
 COPY --from=builder /sbin/tini-static /sbin/tini
 COPY --from=builder /tmp /tmp
 COPY --from=builder --chown=nginx:nginx /usr/sbin/nginx /usr/sbin/nginx
 COPY --from=builder --chown=nginx:nginx /etc/nginx /etc/nginx
+
+# Copy configuration files
 COPY --chown=nginx:nginx ./nginx.conf /etc/nginx/nginx.conf
 COPY --chown=nginx:nginx ./default.conf /etc/nginx/conf.d/default.conf
 
+# Use tini as init process for proper signal handling
 ENTRYPOINT [ "/sbin/tini", "--" ]
 
+# Expose HTTP, HTTPS, and QUIC ports
 EXPOSE 8080/tcp 8443/tcp 8443/udp
+
+# OCI labels for image metadata
 LABEL description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
       maintainer="ammnt <admin@msftcnsi.com>" \
       org.opencontainers.image.description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
@@ -156,9 +204,15 @@ LABEL description="Distroless NGINX with HTTP/3, QUIC and PQC support🚀" \
       org.opencontainers.image.url="https://msftcnsi.com" \
       org.opencontainers.image.version=${APP_VERSION}
 
+# Health check for container orchestration
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=2 \
   CMD ["/usr/sbin/nginx", "-qt"]
 
+# Use SIGQUIT for graceful shutdown with connection draining
 STOPSIGNAL SIGQUIT
+
+# Run as non-root user for security
 USER nginx
+
+# Start NGINX in foreground mode
 CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
