refactor: update build workflow and pinng GitHub Actions versions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       attestations: write
 
     steps:
-      - name: Checkout repository🧱
+      - name: Checkout repository📥
         uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
 
       - name: Load .env variables☁️
@@ -39,31 +39,31 @@ jobs:
           done < .env
           echo "BUILD_DATE=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
 
-      - name: Install cosign🔒
+      - name: Install Cosign🔐
         uses: sigstore/cosign-installer@faadad0cce49287aee09b3a48701e75088a2c6ad
         with:
           cosign-release: v${{ env.COSIGN_VERSION }}
 
-      - name: Setup Docker buildx🛠️
+      - name: Setup Docker Buildx🏗️
         uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435
         with:
           version: v${{ env.BUILDX_VERSION }}
           driver-opts: image=moby/buildkit:v${{ env.BUILDKIT_VERSION }}-rootless
 
-      - name: Log into GHCR🔑
+      - name: Login to GHCR🔑
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GH_TOKEN }}
 
-      - name: Log into Docker Hub🔑
+      - name: Login to Docker Hub🔑
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Analyze the Dockerfile with Hadolint💊
+      - name: Lint Dockerfile with Hadolint🔍
         uses: hadolint/hadolint-action@2332a7b74a6de0dda2e2221d575162eba76ba5e5
         with:
           dockerfile: Dockerfile.template
@@ -72,12 +72,12 @@ jobs:
           failure-threshold: warning
           override-info: DL3018
 
-      - name: Upload Hadolint report📊
+      - name: Upload Hadolint report📁
         uses: github/codeql-action/upload-sarif@fdbfb4d2750291e159f0156def62b853c2798ca2
         with:
           sarif_file: hadolint.sarif
 
-      - name: Build the Docker image⛓️
+      - name: Build Docker image🐳
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83
         env:
           DOCKER_BUILD_RECORD_UPLOAD: false
@@ -100,7 +100,7 @@ jobs:
             PCRE_VERSION=${{ env.PCRE_VERSION }}
             ZLIB_VERSION=${{ env.ZLIB_VERSION }}
 
-      - name: Slim and test the Docker image🚀
+      - name: Slim image with Mint🔧
         run: |
           curl -sSL -o ds.tar.gz https://github.com/mintoolkit/mint/releases/download/${{ env.MINT_VERSION }}/dist_linux.tar.gz
           tar -xf ds.tar.gz
@@ -113,7 +113,7 @@ jobs:
           sleep 10 && docker ps -a
           curl -sSI http://127.0.0.1:8080 || exit 1
 
-      - name: Upload the Slim report📊
+      - name: Upload Mint report📁
         uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
         with:
           name: MintToolkit Mint (Slim) report
@@ -125,16 +125,16 @@ jobs:
         run: |
           wget -q https://github.com/wagoodman/dive/releases/download/v${{ env.DIVE_VERSION }}/dive_${{ env.DIVE_VERSION }}_linux_amd64.tar.gz
           tar xzf dive_${{ env.DIVE_VERSION }}_linux_amd64.tar.gz -C /usr/local/bin
-          dive --ci-config "${{ github.workspace }}/.dive-ci/" ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+          dive ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
 
-      - name: Analyze image with Dockle💊
+      - name: Security scan with Dockle🛡️
         uses: goodwithtech/dockle-action@e30e6af832aad6ea7dca2a248d31a85eab6dbd68
         with:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           exit-code: "1"
           exit-level: "warn"
 
-      - name: Analyze image with Docker Scout💊
+      - name: Security scan with Docker Scout🛡️
         uses: docker/scout-action@f8c776824083494ab0d56b8105ba2ca85c86e4de
         with:
           command: cves,sbom
@@ -142,14 +142,15 @@ jobs:
           sarif-file: ${{ github.workspace }}/scout.sarif
           write-comment: true
           summary: true
+          exit-code: "2"
           github-token: ${{ secrets.GH_TOKEN }}
 
-      - name: Upload Docker Scout report📊
+      - name: Upload Docker Scout report📁
         uses: github/codeql-action/upload-sarif@fdbfb4d2750291e159f0156def62b853c2798ca2
         with:
           sarif_file: scout.sarif
 
-      - name: Analyze image with Trivy💊
+      - name: Security scan with Trivy🛡️
         uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8
         with:
           image-ref: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
@@ -157,15 +158,16 @@ jobs:
           format: "sarif"
           output: "${{ github.workspace }}/trivy.sarif"
           severity: "MEDIUM,HIGH,CRITICAL"
-          scanners: "vuln"
+          scanners: "vuln,secret"
+          exit-code: "1"
           github-pat: ${{ secrets.GH_TOKEN }}
 
-      - name: Upload Trivy report📊
+      - name: Upload Trivy report📁
         uses: github/codeql-action/upload-sarif@fdbfb4d2750291e159f0156def62b853c2798ca2
         with:
           sarif_file: trivy.sarif
 
-      - name: Analyze image with Grype💊
+      - name: Security scan with Grype🛡️
         uses: anchore/scan-action@40a61b52209e9d50e87917c5b901783d546b12d0
         with:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
@@ -175,12 +177,12 @@ jobs:
           grype-version: v${{ env.GRYPE_VERSION }}
           output-file: ${{ github.workspace }}/grype.sarif
 
-      - name: Upload Grype report📊
+      - name: Upload Grype report📁
         uses: github/codeql-action/upload-sarif@fdbfb4d2750291e159f0156def62b853c2798ca2
         with:
           sarif_file: grype.sarif
 
-      - name: Analyze image with Snyk💊
+      - name: Security scan with Snyk🛡️
         uses: snyk/actions/docker@9adf32b1121593767fc3c057af55b55db032dc04
         continue-on-error: true
         env:
@@ -189,14 +191,14 @@ jobs:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           sarif: true
           json: false
-          args: --sarif-file-output=snyk.sarif
+          args: --file=Dockerfile.template --sarif-file-output=snyk.sarif
 
-      - name: Upload Snyk report📊
+      - name: Upload Snyk report📁
         uses: github/codeql-action/upload-sarif@fdbfb4d2750291e159f0156def62b853c2798ca2
         with:
           sarif_file: snyk.sarif
 
-      - name: Analyze image with Syft💊
+      - name: Generate SBOM with Syft📋
         uses: anchore/sbom-action@fbfd9c6c189226748411491745178e0c2017392d
         with:
           syft-version: v${{ env.SYFT_VERSION }}
@@ -206,7 +208,7 @@ jobs:
           dependency-snapshot: true
           github-token: ${{ secrets.GH_TOKEN }}
 
-      - name: Push the Docker images to registries💾
+      - name: Push images to registries🚚
         run: |
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ghcr.io/ammnt/nginx:latest
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ammnt/nginx:${{ env.APP_VERSION }}
@@ -217,7 +219,7 @@ jobs:
             | cut -d'@' -f2)
           echo "DIGEST=$DIGEST" >> $GITHUB_ENV
 
-      - name: Attestation the Docker image📍
+      - name: Attest image provenance📜
         uses: actions/attest-build-provenance@977bb373ede98d70efdf65b84cb5f73e068dcc2a
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -226,7 +228,7 @@ jobs:
           show-summary: true
           github-token: ${{ secrets.GH_TOKEN }}
 
-      - name: Sign and check published Docker images🔐
+      - name: Sign container images✍️
         env:
           COSIGN_EXPERIMENTAL: "true"
           COSIGN_KEY: ${{ secrets.COSIGN_KEY }}
